syntax = "proto3";

package api.console.administration;

option go_package = "github.com/omalloc/kratos-admin/api/console/administration;administration";
option java_multiple_files = true;
option java_package = "api.console.administration";

import "google/api/annotations.proto";
import "protobuf/pagination.proto";
import "google/protobuf/timestamp.proto";

service Menu {
	rpc CreateMenu (CreateMenuRequest) returns (CreateMenuReply){
		option (google.api.http) = {
			post: "/api/console/menu"
			body: "*"
		};
	}
	rpc UpdateMenu (UpdateMenuRequest) returns (UpdateMenuReply){
		option (google.api.http) = {
			put: "/api/console/menu/{id}"
			body: "*"
		};
	}
	rpc DeleteMenu (DeleteMenuRequest) returns (DeleteMenuReply){
		option (google.api.http) = {
			delete: "/api/console/menu/{id}"
		};
	}
	rpc GetMenu (GetMenuRequest) returns (GetMenuReply){
		option (google.api.http) = {
			get: "/api/console/menu/{id}"
		};
	}
	rpc ListMenu (ListMenuRequest) returns (ListMenuReply){
		option (google.api.http) = {
			get: "/api/console/menu"
		};
	}
}

enum MenuStatus {
	MenuStatus_ENABLE = 0;
	MenuStatus_DISABLE = 1;
}

message MenuInfo {
	int64 id = 1;
	int64 pid = 2;
	int64 permission_id = 3;
	string name = 4;
	string icon = 5;
	string path = 6;
	int64 sort_by = 7;
	bool hidden = 8;
	MenuStatus status = 9;
	google.protobuf.Timestamp created_at = 10;
	google.protobuf.Timestamp updated_at = 11;
}

message CreateMenuRequest {
	int64 pid = 1;
	int64 permission_id = 2;
	string name = 3;
	string icon = 4;
	string path = 5;
	int64 sort_by = 6;
	bool hidden = 7;
	MenuStatus status = 8;
}

message CreateMenuReply {
	int64 id = 1;
}

message UpdateMenuRequest {
	int64 id = 1;
	int64 pid = 2;
	int64 permission_id = 3;
	string name = 4;
	string icon = 5;
	string path = 6;
	int64 sort_by = 7;
	bool hidden = 8;
	MenuStatus status = 9;
}

message UpdateMenuReply {}

message DeleteMenuRequest {
	int64 id = 1;
}

message DeleteMenuReply {}

message GetMenuRequest {
	int64 id = 1;
}

message GetMenuReply {
	MenuInfo data = 1;
}

message ListMenuRequest {
	protobuf.Pagination pagination = 1;
	string name = 2;
	MenuStatus status = 3;
}

message ListMenuReply {
	repeated MenuInfo data = 1;
	protobuf.Pagination pagination = 2;
}